--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             
                 <ul class="list-mail">
                     <li class="itemm"><a class="list-first" href="mailto:info@devstudio.com">
-                        <svg class="icon">
+                        <svg class="icon-mail">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg> info@devstudio.com</a></li>
                     <li class="itemm"><a class="list-first" href="tel:+380961111111">
-                        <svg class="icon">
+                        <svg class="icon-mail">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg> +38 096 111 11 11</a></li>
                 </ul>
@@ -240,6 +240,49 @@
             </ul>
         </div>
         </section>
+        <!-- постоянные клиенты -->
+        <section class="clients">
+            <div class="conteiner">
+                <h3 class="title">Постоянные клиенты</h3>
+                <ul class="title-clients">
+                    <li class="item-clients">
+                        <a href="" class="link-clients" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon-clients">
+                                <use href="./images/sprite.svg#icon-group4"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-clients">
+                        <a href="" class="link-clients" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon-clients">
+                                <use href="./images/sprite.svg#icon-group5"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-clients">
+                        <a href="" class="link-clients" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon-clients">
+                                <use href="./images/sprite.svg#icon-group7"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-clients">
+                        <a href="" class="link-clients" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon-clients">
+                                <use href="./images/sprite.svg#icon-group8"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="item-clients">
+                        <a href="" class="link-clients" target="_blank" rel="noopener noreferrer">
+                            <svg class="icon-clients">
+                                <use href="./images/sprite.svg#icon-group9"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
 </main>
 
     <footer class="footer">
@@ -255,6 +298,36 @@
             </li>
             <li class="footer-item"><a class="inform" href="mailto:info@example.com">info@example.com</a></li>
             <li class="footer-item"><a class="inform" href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
+        <ul class="title-team">
+            <li class="item-our-team">
+                <a href=""class="link-team" target="_blank" rel="noopener noreferrer">
+                    <svg class="icon-our-team">
+                        <use href="./images/sprite.svg#icon-instagram" ></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item-our-team">
+                <a href=""class="link-team" target="_blank" rel="nooperer noreferrer">
+                    <svg class="icon-our-team">
+                        <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item-our-team">
+                <a href="" class="link-team" target="_blank" rel="nooperer noreferrer">
+                    <svg class="icon-our-team">
+                        <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="item-our-team">
+                <a href="" class="link-team" target="_blank" rel="nooperer noreferrer">
+                    <svg class="icon-our-team">
+                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
         </ul>
         </div>
     </footer>
