footer and main
сделал полностью задания

--- a/index.html
+++ b/index.html
@@ -287,48 +287,55 @@
 
     <footer class="footer">
         <div class="conteiner foot">
-            <div class="footer-logo">
-                <a class="logo" href="./index.html" lang="en"><span class="logo-first-color">Web</span><span class="logo-second-color">Studio</span></a>
+            <div class="conteiner-three">
+                <div class="footer-logo">
+                    <a class="logo" href="./index.html" lang="en"><span class="logo-first-color">Web</span><span class="logo-second-color">Studio</span></a>
+                </div>
+            <ul class="list">
+                <li class="footer-item">
+                    <address class="address">
+                        г.Киев пр-т Леси Украинки 26
+                    </address>
+                </li>
+                <li class="footer-item"><a class="inform" href="mailto:info@example.com">info@example.com</a></li>
+                <li class="footer-item"><a class="inform" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
             </div>
-        <ul class="list">
-            <li class="footer-item">
-                <address class="address">
-                    г.Киев пр-т Леси Украинки 26
-                </address>
-            </li>
-            <li class="footer-item"><a class="inform" href="mailto:info@example.com">info@example.com</a></li>
-            <li class="footer-item"><a class="inform" href="tel:+380991111111">+38 099 111 11 11</a></li>
-        </ul>
-        <ul class="title-team">
-            <li class="item-our-team">
-                <a href=""class="link-team" target="_blank" rel="noopener noreferrer">
-                    <svg class="icon-our-team">
-                        <use href="./images/sprite.svg#icon-instagram" ></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="item-our-team">
-                <a href=""class="link-team" target="_blank" rel="nooperer noreferrer">
-                    <svg class="icon-our-team">
-                        <use href="./images/sprite.svg#icon-twitter"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="item-our-team">
-                <a href="" class="link-team" target="_blank" rel="nooperer noreferrer">
-                    <svg class="icon-our-team">
-                        <use href="./images/sprite.svg#icon-facebook"></use>
-                    </svg>
-                </a>
-            </li>
-            <li class="item-our-team">
-                <a href="" class="link-team" target="_blank" rel="nooperer noreferrer">
-                    <svg class="icon-our-team">
-                        <use href="./images/sprite.svg#icon-linkedin"></use>
-                    </svg>
-                </a>
-            </li>
-        </ul>
+            <div class="footer-icon">
+                <section class="section-footer">
+                    <h3 class="title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                    <ul class="title-team">
+                        <li class="item-our-team">
+                            <a href=""class="link-team-footer" target="_blank" rel="noopener noreferrer">
+                                <svg class="icon-our-team">
+                                    <use href="./images/sprite.svg#icon-instagram" ></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-our-team">
+                            <a href=""class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                <svg class="icon-our-team">
+                                    <use href="./images/sprite.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-our-team">
+                            <a href="" class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                <svg class="icon-our-team">
+                                    <use href="./images/sprite.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="item-our-team">
+                            <a href="" class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                <svg class="icon-our-team">
+                                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+            </div>
         </div>
     </footer>
     
