--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>portfolio</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
@@ -42,8 +42,8 @@
             <div class="conteiner"> 
                 <ul class="list-portf">
                     <li  class="portf-item">
-                    <a href="">
-                        <img src="./images/imgp1.jpg" alt="описание сайта">                            
+                    <a href="" class="portf-icon">
+                        <img width="378" src="./images/imgp1.jpg" alt="описание сайта">                            
                         <div class="info-portf">
                             <h2 class="title-portf">Технокряк</h2>
                         <p>Веб-сайт</p>
@@ -51,7 +51,7 @@
                     </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp2.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp2.jpg" alt="описание сайта">
                     <div class="info-portf">
                         <h2 class="title-portf">Постер New Orlean vs Golden Star</h2>
                         <p>Дизайн</p>
@@ -59,7 +59,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp3.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp3.jpg" alt="описание сайта">
                        <div class="info-portf">
                         <h2 class="title-portf">Ресторан Seafood</h2>
                         <p>Приложение</p>
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp4.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp4.jpg" alt="описание сайта">
                         <div class="info-portf">
                         <h2 class="title-portf">Проект Prime</h2>
                         <p>Маркетинг</p>
@@ -75,7 +75,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp5.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp5.jpg" alt="описание сайта">
                         <div class="info-portf">
                         <h2 class="title-portf">Проект Boxes</h2>
                         <p>Приложение</p>
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp6.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp6.jpg" alt="описание сайта">
                         <div class="info-portf">
                         <h2 class="title-portf" >Inspiration has no Borders</h2>
                         <p>Веб-сайт</p>
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                     <li  class="portf-item">
-                        <a href=""><img src="./images/imgp7.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp7.jpg" alt="описание сайта">
                     <div class="info-portf">
                         <h2 class="title-portf" >Издание Limited Edition</h2>
                         <p>Дизайн</p>
@@ -99,7 +99,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp8.jpg" alt="описание сайта">
+                        <a href=""><img width="378" src="./images/imgp8.jpg" alt="описание сайта">
                     <div class="info-portf">
                         <h2 class="title-portf" >Проект LAB</h2>
                         <p>Маркетинг</p>
@@ -107,7 +107,7 @@
                         </a>
                     </li>
                     <li class="portf-item">
-                        <a href=""><img src="./images/imgp9.jpg" alt="">
+                        <a href=""><img width="378" src="./images/imgp9.jpg" alt="">
                     <div class="info-portf">
                         <h2 class="title-portf" >Growing Business</h2>
                         <p>Приложение</p>
@@ -121,18 +121,55 @@
         </main>
         <footer class="footer">
             <div class="conteiner foot">
-                <div class="footer-logo">
-                    <a class="logo" href="./index.html" lang="en"><span class="logo-first-color">Web</span><span class="logo-second-color">Studio</span></a>
+                <div class="conteiner-three">
+                    <div class="footer-logo">
+                        <a class="logo" href="./index.html" lang="en"><span class="logo-first-color">Web</span><span class="logo-second-color">Studio</span></a>
+                    </div>
+                <ul class="list">
+                    <li class="footer-item">
+                        <address class="address">
+                            г.Киев пр-т Леси Украинки 26
+                        </address>
+                    </li>
+                    <li class="footer-item"><a class="inform" href="mailto:info@example.com">info@example.com</a></li>
+                    <li class="footer-item"><a class="inform" href="tel:+380991111111">+38 099 111 11 11</a></li>
+                </ul>
                 </div>
-            <ul class="list">
-                <li class="footer-item">
-                    <address class="address">
-                        г.Киев пр-т Леси Украинки 26
-                    </address>
-                </li>
-                <li class="footer-item"><a class="inform" href="mailto:info@example.com">info@example.com</a></li>
-                <li class="footer-item"><a class="inform" href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+                <div class="footer-icon">
+                    <section class="section-footer">
+                        <h3 class="title">ПРИСОЕДИНЯЙТЕСЬ</h3>
+                        <ul class="title-team">
+                            <li class="item-our-team">
+                                <a href=""class="link-team-footer" target="_blank" rel="noopener noreferrer">
+                                    <svg class="icon-our-team">
+                                        <use href="./images/sprite.svg#icon-instagram" ></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-our-team">
+                                <a href=""class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                    <svg class="icon-our-team">
+                                        <use href="./images/sprite.svg#icon-twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-our-team">
+                                <a href="" class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                    <svg class="icon-our-team">
+                                        <use href="./images/sprite.svg#icon-facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="item-our-team">
+                                <a href="" class="link-team-footer" target="_blank" rel="nooperer noreferrer">
+                                    <svg class="icon-our-team">
+                                        <use href="./images/sprite.svg#icon-linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </section>
+                </div>
             </div>
         </footer>
     </body>
